--- a/public/ixn/activities/hello-world/index.html
+++ b/public/ixn/activities/hello-world/index.html
@@ -13,7 +13,8 @@
 	<div id="container">
 		<h1>Hello World Custom Activity</h1>
 		<p>This Activity really only does one simple thing, and that's pass the data through to the endpoints defined in the config.js</p>
-		<p>Doing this keeps this as simple as possible and thus...a hello world for Custom Interactions.</p>
+		<p>Doing this keeps this as simple as possible and thus...a hello world for Custom Interactions. </p>
+		<p>AMPScript rules :)</p>
 	</div>
 </body>
 </html>
